2008-02-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems.adb, rtems.ads: Object_Get_Name now has a proper implementation
	thanks to a binding tip from Laurent Guerby.

2008-02-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems.adb, rtems.ads: Add Ada binding for Object Services.

2007-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems.adb: Add missing semicolon.

2007-11-27	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* rtems.adb, rtems.ads: Fixed errors in the barrier binding.

2007-10-25	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* rtems.adb, rtems.ads: Added some more missing bindings.

2007-10-18	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* rtems.adb, rtems.ads: Added a missing binding.

2007-10-10	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* rtems.adb, rtems.ads: Cleaned up binding and removed bindings for
	things that are not reasonable to do in Ada.

2007-10-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems.adb, rtems.ads: Most of single processor Ada tests now build.
	Some run.

2007-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems.adb: Fix warnings.

2007-04-02	Jennifer Averett <jennifer.averrett@oarcorp.com>

	* rtems.adb, rtems.ads: Update.

2005-05-23	Joel Sherrill <joel@OARcorp.com>

	* rtems.adb: Fix variable name.

2005-05-23	Joel Sherrill <joel@OARcorp.com>

	PR rtems_misc/795
	* rtems.ads: Fix parameter ordering.

2005-05-03	Joel Sherrill <joel@OARcorp.com>

	* rtems.adb: Remove gcc 4.x warnings.

2005-05-02	Ralf Corsepius <ralf.corsepius@rtems.org>

	PR 782/rtems
	* rtems.ads: Remove stray ';'.
	* rtems.adb: Stub Task_Variable_Add, Task_Variable_Get,
	Task_Variable_Delete.

2005-04-30	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Use preinstall.am
	* preinstall.am: New.

2004-01-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add PREINSTALL_DIRS.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Move include_adadir into RTEMS_ADA condional block.