@@ -1,3 +1,7 @@
+2008-02-04	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* rtems.adb, rtems.ads: Correct binding to Object_Get_Name. Now works.
+
 2008-02-01	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* rtems.adb, rtems.ads: Object_Get_Name now has a proper implementation
